# NimdaClaw

./: .gitignore  README.md
apps/features/: README.md
apps/features/collection-detail/frontend/: index.js  style.css
apps/features/collection-detail/tests/: test_jp_tv_browse_edit.py  test_jp_tv_link_index.py  test_jp_tv_parse_render.py
apps/features/collection-info/frontend/: index.js  style.css
apps/features/collection-info/tests/: test_jp_tv_collection_records.py
apps/framework/backend/: pyproject.toml
apps/framework/backend/samples/: example-jp-tv-2015.yaml  example-tvinfo.yaml  jp-tv-browse.config.yaml  tv-jp-symbol-table.yaml  tv-jp.yaml
apps/framework/backend/work_catalog_yaml/: __init__.py  __main__.py  catalog.py  cli.py  layout.py  scan.py  yaml_io.py
apps/framework/backend/work_catalog_yaml/jp_tv/: __init__.py  browse_app.py  browse_config.default.yaml  browse_payload.py  browse_save.py  browse_settings.py  collection_records.py  link_index.py  load.py  parse.py  render.py  symbol_table.py  validate.py
apps/framework/frontend/: index.html
apps/framework/frontend/src/: App.js  main.js
apps/framework/frontend/styles/: app.css
config/features/collection-detail/: config.yaml
config/features/collection-info/: config.yaml
config/framework/: app.yaml
data/features/collection-info/db/: collection-info.yaml
data/source/Animation/: Note.h  wiki cartoon movie.txt  wiki cartoon new.txt  wiki cartoon ova.txt
data/source/Game/: gal.txt  山门与环境.txt
data/source/Image/: imageNote.txt  imageTag.txt  yande.re搜集情况.txt
docs/: framework-design.md
(+130 files in other folders)
